--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'eclipse'
 }
 
+compileJava {
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
+}
+
 dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
